--- a/public/partials/homeView.html
+++ b/public/partials/homeView.html
@@ -18,11 +18,15 @@ $('a#added').click(function(){
 
 <p>Get started with <a href="#/skills">SKILLS</a></p>
 
-<h4>Upcoming Releases</h4>
+<h3>Upcoming Releases</h3>
 <p>Projects and Goals will be released with the same functionality as skills and tasks.</p>
 
 <a href='#' id='future'>Planned Functionality</a><br>
 <a href='#' id='added'>Recently Added Functionality</a>
-
+<h3>Updates:</h3>
+<p>Sep 14: Fixed update fields for Projects</p>
+<p>Sep 19: TASKS 
+	Added "Fields" button to toggle column displays for
+	Fixed update fields and used Angular instead of Jquery to update fields. WORKS AWESOME.
 </body>
 </html>
