--- a/public/css/avatar.css
+++ b/public/css/avatar.css
@@ -49,7 +49,7 @@ tbody {
 .entry-off {
 	display: none;
 }
-.entry-on {
+.entry {
 	height: 20px;
 	width: 75px;
 }
@@ -107,3 +107,22 @@ button {
 		height: 50px;
 		border: none;
 	}
+
+.displaySelection {
+	border: 1px solid black;
+	position: absolute;
+	bottom: 70px;
+	width: 150px;
+	height: 200px;
+	left: 200px;
+	top: 85px;
+	padding: 10px;
+	z-index: 1;
+	background-color: blue;
+	color: white;
+		white-space: nowrap;
+}
+.displaySelection  label{
+	display: block;
+
+}
